<resources>
    <string name="app_name">SimSim orders</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_call_screen">CallScreenActivity</string>
    <string name="hang">Hang Up</string>
    <string name="call">Call</string>
    <string name="connected">Connected</string>
    <string name="ringing">Ringing</string>
    <string name="phone">Mobile Number</string>
    <string name="password">Password</string>
    <string name="btnlog">LOGIN</string>
    <string name="btnsin">SIGN UP</string>
    <string name="forget"><u>Forget Password ?</u></string>
    <string name="socials">Creat your account with one tab</string>
    <string name="next">NEXT</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="selectcars">Select your car :</string>
    <string name="selectcolor">Select your car color</string>
    <string name="confirmpass">Confirm password</string>
    <string name="select_color">Select color</string>
    <string name="notifi">NOTIFICATIONS</string>
    <string name="favorites">Favorites</string>
    <string name="checkin">Check in</string>
    <string name="recommended">Recommended</string>
    <string name="open">drawer open</string>
    <string name="close">drawer close</string>
    <string name="shop">Shop</string>
    <string name="restaurant2">Restaurant</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="cafe">Cafe</string>
    <string name="salats">Salats</string>
    <string name="main_dishs">Maindish</string>
    <string name="hot_drinks">H_drinks</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="myparchases">Myparchases</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="messages">Messages</string>
    <string name="adduser">Add users</string>
    <string name="terms">Terms and conditions</string>
    <string name="recipet">Recipet</string>
    <string name="help">Help center</string>
    <string name="Contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories :</string>
    <string name="cuisine">Cuisine :</string>
    <string name="category">Category :</string>
    <string name="follow">Follow</string>
    <string name="show_profile">Show profile</string>
    <string name="myorder">My Order :</string>
    <string name="totalprice">Total price :</string>
    <string name="cash">CASH</string>
    <string name="or">Or Pay by :</string>
    <string name="cridet">CRIDET</string>
    <string name="community">Community</string>
    <string name="purchase">Me</string>
    <string name="thanks">Thank you </string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="addpic">Add media</string>
    <string name="editprofilephoto">Edit profile photo</string>
    <string name="phonenumber">Phone number :</string>
    <string name="profileemail">Email :</string>
    <string name="car">Car :</string>
    <string name="carcolor">Car color :</string>
    <string name="lastrestaurant">Last restaurant :</string>
    <string name="lastorder">Last order :</string>
    <string name="editprofile">Update</string>
    <string name="recom">Recommend</string>
    <string name="carmodel">Your car model ...</string>
    <string name="total">Total : </string>
    <string name="shoping_points">Shoping use points</string>
    <string name="points">Points</string>
    <string name="home">Home</string>
    <string name="addusers_title">Add users</string>
    <string name="checkin_title">Checkin</string>
    <string name="myfriendrecommended">Others</string>
    <string name="branches">Branches</string>
    <string name="hide">Hide</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome</string>
    <string name="simsimpoints">Simsim points</string>
    <string name="showpic">Show media</string>
    <string name="recom1">I recom</string>
    <string name="offers">Offers</string>
    <string name="providers">Providers</string>
    <string name="orders">Orders</string>
    <string name="quant_adition">Options</string>
    <string name="writemessage">Write message ...</string>
    <string name="send">Send</string>
    <string name="ask">| ASK</string>
    <string name="from">From :</string>
    <string name="myorders">My orders</string>
    <string name="orderdetails">Order details</string>
    <string name="saved">Saved</string>
    <string name="myordertitle">My order</string>
    <string name="helpcenter">Help center</string>
    <string name="contactus">Contact us</string>
    <string name="restaurant">Restaurant</string>
    <string name="quantity_meal">Quantity meal</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="totleT">Total :</string>
    <string name="exitBackPressed">Please click BACK again to exit</string>
    <string name="its_ok">Its ok</string>
    <string name="dis_like">Dis like</string>
    <string name="btnskip"><u>Skip</u></string>
    <string name="termsCondition"><u>By registering you agree to the terms and conditions</u></string>
    <string name="notDoneYet">Im not DONE yet!</string>
    <string name="SelectAsUnread">Select As Unread</string>
    <string name="Mute">Mute</string>
    <string name="Addtoarchive">Add to Archive</string>
    <string name="Delete">Delete</string>
    <string name="Notimportant">No timportant</string>
    <string name="Blockmessages">Block messages</string>
    <string name="Report">Report</string>
    <string name="btnok">Ok</string>
    <string name="connection_message">Make sure you connect to the Internet</string>
    <string name="cartype">Car type :</string>
    <string name="carmodelprofile">Car model :</string>
    <string name="hintenter">Enter</string>
    <string name="tryagain">There is a problem please try again</string>
    <string name="carbrand">Car Brand :</string>
    <string name="updatecomplete">Modified</string>
    <string name="uploadedSuccess">Uploaded successfully</string>
    <string name="uploaderror">Upload error please try again</string>
    <string name="id">ID :</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait ...</string>
    <string name="inserting">Inserting</string>
    <string name="purchaseFrom">Purchase from</string>
    <string name="favorite_add">Added to favorites</string>
    <string name="quantity_req">Quantity must be selected</string>
    <string name="coin">S.R</string>
    <string name="deliveryStatus">Delivery status</string>
    <string name="orderCompleted">Order completed</string>
    <string name="recommended_purchase">purchase from</string>
    <string name="nonpic">No picture</string>
    <string name="uploaded">upload</string>
    <string name="cancel">cancel</string>
    <string name="sendmsgSuccess">message send succesfully</string>
    <string name="sendmsgunSuccess">message send unsuccesfully</string>
    <string name="order_empty">Order is empty</string>
    <string name="endcall">End call</string>
    <string name="noNumber">no number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="incomingcall">Incoming call</string>
    <string name="backcall">Back</string>
    <string name="msg">Please enable all permission</string>
    <string name="selectcarstypes">Select your car type</string>
    <string name="selectcarsbrand">Select your car brand</string>
    <string name="your_car_color">Your car color</string>
    <string name="traking">Tracking</string>
    <string name="location">location :</string>
    <string name="your_car_brand">Your car brand</string>
    <string name="add_location">Go,to add your location</string>
    <string name="google_maps_key">AIzaSyBi_8bR9WT3U7Jw7OfDIX2qx8ef5RCRY9E</string>
    <string name="option_get_place">get place</string>
    <string name="pick_place">choose near place </string>
    <string name="default_info_title">default_info_title</string>
    <string name="default_info_snippet">default_info_snippet</string>
    <string name="your_location">Your location</string>
    <string name="open_map">open map</string>
    <string name="additional">Additions</string>
    <string name="meal_qty">Meal Qty</string>
    <string name="add">add</string>
    <string name="order_no">Order No. :</string>
    <string name="order_status">Order status :</string>
    <string name="arrived_time">Arrival time :</string>
    <string name="orderId">ID order :</string>
    <string name="use_simsim_points">Use Simsim Points ?</string>
    <string name="youhave">You have</string>
    <string name="yes">Yes</string>
    <string name="checkout">Checkout</string>
    <string name="finish_token_txt">Your registration period has expired Please re-login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgUploadFailed">upload image faild please try again</string>
    <string name="fillentries">please fill all data</string>
    <string name="addFaverror">please try again</string>
    <string name="favorite_remove">removed from favourit</string>
    <string name="update">Update</string>
    <string name="Quantity_implemented">Quantity implemented</string>
    <string name="deliveryStatusTracking">Delivery status :</string>
    <string name="mobile">Mobile :</string>
    <string name="orderNumberNull">There is no order</string>
    <string name="distanseNull">There is no distanse</string>
    <string name="outsideAria">Please approached more even received your order</string>
    <string name="inCar">Moments you will receive your request in the car please run flasher</string>
    <string name="dineIn">Go in until you eat your meal</string>
    <string name="toWindow">Go to receive your order from window</string>
    <string name="no_path">No path</string>
    <string name="product_price">Product price :</string>
    <string name="products_quantity">Products quantity :</string>
    <string name="total_price">Total price :</string>
    <string name="today">Today</string>
    <string name="previously">Previously</string>
    <string name="forgetpass">Forget pasword</string>
    <string name="enter_email">Enter your email</string>
    <string name="restPass">Reset</string>
    <string name="sendEmail">Please check your email</string>
    <string name="errorEmail">Email error</string>
    <string name="trackLocation">Unable to trace your location</string>
    <string name="turnOnGPS">Please turn on your GPS connection</string>
    <string name="passMatch">Password does not match</string>
    <string name="checkedTerms">please checked the terms and conditions</string>
    <string name="forgetpass_description">Please enter your email address which you have registered, we will send a message to your email address containing a link please open it to reset your password</string>
    <string name="back">back</string>
    <string name="totalprice1"><b>Total price :</b></string>
    <string name="add_location_disc">Dear customer, please add your location to success signup </string>
    <string name="yourOrderServed">Your order has been served</string>
    <string name="savedProducts">Saved products</string>
    <string name="ok">ok</string>
    <string name="delete_cart">Clear your cart </string>
    <string name="delete_cart_details">Your cart contains an order , would you like to delete it and start over</string>
    <string name="review">Review</string>
    <string name="lang">language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
</resources>