<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item android:id="@+id/myparchases" android:icon="@drawable/ic_purchases" android:title="@string/myparchases"/>-->
    <item android:id="@+id/profile" android:icon="@drawable/ic_user" android:title="@string/profile"/>
    <item android:id="@+id/wallet" android:icon="@drawable/ic_wallet" android:title="@string/wallet"/>
    <item android:id="@+id/messages" android:icon="@drawable/ic_message" android:title="@string/messages"/>
    <item android:id="@+id/adduser" android:icon="@drawable/ic_adduser" android:title="@string/adduser"/>
    <item android:id="@+id/myorders" android:icon="@drawable/file_red" android:title="@string/myorders"/>

    <item
        android:id="@+id/saved"
        android:title="@string/savedProducts"
        android:icon="@drawable/ic_save"
        />
    <item android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"/>
    <item android:id="@+id/Contact_us" android:icon="@drawable/ic_phone2" android:title="@string/Contact_us"/>
    <item android:id="@+id/logout" android:icon="@drawable/logout" android:title="@string/logout"/>
</menu>