<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:paddingBottom="10dp"
    android:background="@drawable/shape_background_branches">

    <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_token_txt"
        android:textSize="@dimen/title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/shapbtncancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"/>

    <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shapbtnlogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"/>
</RelativeLayout>