<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar_background_shape_login"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTitleTextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/recycler_color"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/LLLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@color/white">

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/btnskip"
            android:textColor="@color/texthint"
            android:textSize="@dimen/title"
            android:layout_gravity="top|end"
            android:gravity="center"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="20dp"
            android:src="@drawable/logo1"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="start|center"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:textColor="@color/texthint"
            android:textColorHint="@color/texthint"
            android:textSize="@dimen/title"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <View
            android:id="@+id/underline_mobile"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/under_line"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:gravity="start|center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/texthint"
            android:textColorHint="@color/texthint"
            android:textSize="@dimen/title"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <View
            android:id="@+id/underline_password"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/under_line"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:layout_marginBottom="80dp"
            android:text="@string/forget"
            android:textColor="@color/texthint"
            android:textSize="@dimen/content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shapbtnlogin"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/btnlog"
            android:textColor="@color/recycler_color"
            android:textSize="@dimen/boldtext1"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp" />

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomButton
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapbtnsignup"
            android:text="@string/btnsin"
            android:textColor="@color/white"
            android:textSize="@dimen/boldtext1"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>