<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shapedialogheader"
            android:padding="10dp">

            <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/your_location"
                android:textColor="@color/white"
                android:textSize="@dimen/boldtext"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/line_1" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/location" />

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:text="@string/add_location_disc" />

        <net.phpsm.simsim.simsiminstantorder.CustomViews.CustomButton
            android:id="@+id/open_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/send_btn_selector"
            android:text="@string/add_location"
            android:textColor="@color/white"
            android:textSize="@dimen/titleSize" />
    </LinearLayout>

</android.support.v7.widget.CardView>